--- a/index.html
+++ b/index.html
@@ -4,18 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Robert D'Antoni: Photo Portfolio</title>
+  <title>Our first template</title>
 	<meta charset="UTF-8" />
-	<link rel="stylesheet" href="styles.css">
-
-
+	<link rel="stylesheet" href="style.css">
 </header>
 
 <body>
-
-<h1>Hello, World!</h1>
-
+  <div class="wrapperOne">
+    <h1>We Are Group Number 2!</h1>
+    <hr class="solidDivider">
+    <p id=firstParagraph>This is VS Code's version of Lorem ipsum dolor sit amet 
+      consectetur, adipisicing elit. Eius expedita explicabo provident dolorum
+       placeat voluptatum, eveniet maiores perferendis debitis quisquam, minus
+        commodi minima ipsa earum cum veniam praesentium. Ducimus, eligendi?
+      <br>
+      <br>
+    </p>
+    <button id="headerButton">LEARN MORE</button>
+  </div>
+  <div>
+    <p class="dummy">This is a dummy pragraph</p>
+  </div>
 </body>
-
+<footer>
+  Test Footer
+</footer>
 
 </html>
