--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="wrapperOne">
     <h1>We Are Group Number 2!</h1>
-    <hr class="solidDivider">
+    <hr class="blueDivider">
     <p id=firstParagraph>This is VS Code's version of Lorem ipsum dolor sit amet 
       consectetur, adipisicing elit. Eius expedita explicabo provident dolorum
        placeat voluptatum, eveniet maiores perferendis debitis quisquam, minus
@@ -25,9 +25,38 @@
   <div>
     <p class="dummy">This is a dummy pragraph</p>
   </div>
+
+  <!-- Starting here: Section 6 -->
+  <div class="sectionSixContainer">
+    <h3 class="whiteHeadline">
+      MEET OUR AMAZING GROUP
+    </h3>
+    <h4 class="whiteHeadline">
+      Lorem ipsum dolor sit amet ... basically a subheadline
+    </h4>
+    <hr class="whiteDivider">
+    <div class="profilecontainer">
+      <div class="profileClass">
+        <img src="Media/ProfilePics/Said.jpg" class=profilePic>
+        <p class="profileText"><b>Said</b><br>Aspiring Full-Stack Developer</p>
+      </div>
+      <div class="profileClass">
+        <img src="Media/ProfilePics/Robert.jpg" class=profilePic>
+        <p class="profileText"><b>Robert D.</b><br>Aspiring Full-Stack Developer</p>
+      </div>
+      <div class="profileClass">
+        <img src="Media/ProfilePics/Matthias.jpg" class=profilePic>
+        <p class="profileText"><b>Matthias S.</b><br>Aspiring Full-Stack Developer</p>
+      </div>
+
+    </div>
+    <p class="whiteParagraph">Become part of our dream group, join us !
+    </p>
+    <button id="hiringButton">WE ARE HIRING</button>
+  </div>
 </body>
 <footer>
-  Test Footer
+  Test Footer 
 </footer>
 
-</html>
+</html> 
