--- a/index.html
+++ b/index.html
@@ -5,18 +5,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Robert D'Antoni: Photo Portfolio</title>
-	<meta charset="UTF-8" />
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <!-- <link rel="stylesheet" href="reset.css"> -->
+  <link rel="stylesheet" href="style.css">
 
 
 </header>
 
 <body>
-  <script src="index.js">
-  </script>
 
-<h1>Hello, World!</h1>
-<p>Start the project!</p>
+  <div class="container">
+
+    <div class="wrapper">
+      <header class="mainheader">
+        <div class="bgk-header">
+          <div>
+            <div class="logo">
+              <img src="images/png/logo.png" alt="tajam" width="44" height="50" title="tajam">
+              Tajam
+            </div>
+            <div>
+              <ul id=menu>
+                <li class="item"><a href="#">Home</a></li>
+                <li class="item"><a href="#">ABOUT</a></li>
+                <li class="item"><a href="#">EXPERTISE</a></li>
+                <li class="item"><a href="#">TEAMS</a></li>
+                <li class="item"><a href="#">WORKS</a></li>
+                <li class="item"><a href="#">PEOPLE SAY</a></li>
+                <li class="item"><a href="#">CONTACT</a></li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+      </header>
+      <div id="about">
+        <div class="our-story sub-wrapper">
+          <div class="our-story-image">
+            <img class="" src="images/png/logo-big.png" alt="" width="235" height="229">
+          </div>
+          <div class="our-story-text">
+            <p class="text-ourStory-title">OUR STORY</p>
+            <p class="text-ourStory-dsc">
+              This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
+              auctor
+              aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh
+              id elit. Duis sed odio sit amet nibh vulputate cursus<br><span class="text-style">&nbsp;</span><br>Morbi
+              accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non &nbsp;mauris vitae
+              erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+              inceptos himenaeos.</p>
+            <a href="#">
+              <div class="btn-learn-more">
+                LEARN MORE
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="about-movie">
+          <div class="bgk-middle">
+            <div class="play-icon">
+              <img class="play" src="images/svg/play.svg" alt="play" width="37" height="45">
+            </div>
+            <p class="text-9">WATCH OUR STORY</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="expertise" class="sub-wrapper">
+        <div>
+          <img src="images/png/screen.png" alt="screen">
+          <p>WEB DESIGN AND DEVELOPEMENT</p>
+          <p>This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
+            auctor aliquet Aenean.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 </body>
 
 
