--- a/index.html
+++ b/index.html
@@ -54,6 +54,36 @@
     </p>
     <button id="hiringButton">WE ARE HIRING</button>
   </div>
+<!-- Starting here: Section 7 and Section 8 -->
+  <div class="boxSevenEight">
+    <div class="boxSeven">
+      <h2 id="headingSeven">
+        SEND US YOUR QUESTIONS
+      </h2>
+      <form>
+        <input type="text" id="inputName" size="60" placeholder="Name"> <br>
+        <input type="email" id="inputEmail" size="60" placeholder="Email"> <br>
+        <input type="text" id="inputSubject" size="60" placeholder="Subject"> <br>
+        <textarea id="inputMessage" size="60" placeholder="Your Message"></textarea> <br>
+        <input type="submit" id="inputSubmit" value="SUBMIT">
+      </form>
+    </div>
+    <div class="boxEight">
+      <h2 id="headingEight">
+        OUR HAPPY CLIENTS
+      </h2>
+      <img src="Media/BrandLogos/Zara_Logo.svg" class="brandLogo" id="logo1">
+      <img src="Media/BrandLogos/Logo_of_Mango.svg" class="brandLogo" id="logo2">
+      <img src="Media/BrandLogos/Barneys_New_York_Logo.svg" class="brandLogo" id="logo3">
+      <img src="Media/BrandLogos/Gucci_Logo.svg" class="brandLogo" id="logo4">
+      <img src="Media/BrandLogos/Calvin_klein_logo.svg" class="brandLogo" id="logo5">
+      <img src="Media/BrandLogos/Logo_NIKE.svg" class="brandLogo" id="logo6">
+      <img src="Media/BrandLogos/Converse_logo.svg" class="brandLogo" id="logo7">
+      <img src="Media/BrandLogos/Puma_Logo.svg" class="brandLogo" id="logo8">
+      <img src="Media/BrandLogos/Levi's_logo.svg" class="brandLogo" id="logo9">
+      <img src="Media/BrandLogos/Billabong.svg" class="brandLogo" id="logo10">
+    </div>
+  </div>
 </body>
 <footer>
   Test Footer 
