made sure Section 3 fits in well

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     </p>
     <button id="headerButton">LEARN MORE</button>
   </div>
+
+  <!-- Starting here: Section 3 -->
+
   <div id="about">
         <div class="our-story sub-wrapper">
           <div class="our-story-image">
@@ -67,15 +70,18 @@
               accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non &nbsp;mauris vitae
               erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
               inceptos himenaeos.</p>
-            <a href="#">
+              <button id="buttonSection3">LEARN MORE</button>
+<!--             <a href="#">
               <div class="btn-learn-more">
                 LEARN MORE
               </div>
-            </a>
+            </a> -->
           </div>
         </div>
+      </div>
 
   <!-- Starting here: Section 6 -->
+
   <div class="sectionSixContainer">
     <h3 class="whiteHeadline">
       MEET OUR AMAZING GROUP
