adding Section 7 and 8

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
 
     </div>
-    <p class="whiteParagraph">Become part of our dream group, join us !
+    <p class="whiteParagraph">Become part of our dream-team, join us !
     </p>
     <button id="hiringButton">WE ARE HIRING</button>
   </div>
@@ -116,10 +116,10 @@
         SEND US YOUR QUESTIONS
       </h2>
       <form>
-        <input type="text" id="inputName" size="60" placeholder="Name"> <br>
-        <input type="email" id="inputEmail" size="60" placeholder="Email"> <br>
-        <input type="text" id="inputSubject" size="60" placeholder="Subject"> <br>
-        <textarea id="inputMessage" size="60" placeholder="Your Message"></textarea> <br>
+        <input type="text" id="inputName" size="60" placeholder="  Name"> <br>
+        <input type="email" id="inputEmail" size="60" placeholder="  Email"> <br>
+        <input type="text" id="inputSubject" size="60" placeholder="  Subject"> <br>
+        <textarea id="inputMessage" size="60" placeholder=" Your Message"></textarea> <br>
         <input type="submit" id="inputSubmit" value="SUBMIT">
       </form>
     </div>
@@ -143,6 +143,6 @@
 <footer>
   Test Footer 
 </footer>
-
+ 
 
 </html> 
