--- a/index.html
+++ b/index.html
@@ -17,28 +17,6 @@
   <div class="container">
 
     <div class="wrapper">
-      <header class="mainheader">
-        <div class="bgk-header">
-          <div>
-            <div class="logo">
-              <img src="images/png/logo.png" alt="tajam" width="44" height="50" title="tajam">
-              Tajam
-            </div>
-            <div>
-              <ul id=menu>
-                <li class="item"><a href="#">Home</a></li>
-                <li class="item"><a href="#">ABOUT</a></li>
-                <li class="item"><a href="#">EXPERTISE</a></li>
-                <li class="item"><a href="#">TEAMS</a></li>
-                <li class="item"><a href="#">WORKS</a></li>
-                <li class="item"><a href="#">PEOPLE SAY</a></li>
-                <li class="item"><a href="#">CONTACT</a></li>
-              </ul>
-            </div>
-
-          </div>
-        </div>
-      </header>
       <div id="about">
         <div class="our-story sub-wrapper">
           <div class="our-story-image">
@@ -46,7 +24,7 @@
           </div>
           <div class="our-story-text">
             <p class="text-ourStory-title">OUR STORY</p>
-            <p class="text-ourStory-dsc">
+            <p class="text-ourStory-dsc text-1">
               This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor
               aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh
@@ -61,29 +39,62 @@
             </a>
           </div>
         </div>
-        <div class="about-movie">
-          <div class="bgk-middle">
-            <div class="play-icon">
-              <img class="play" src="images/svg/play.svg" alt="play" width="37" height="45">
-            </div>
-            <p class="text-9">WATCH OUR STORY</p>
-          </div>
-        </div>
+
       </div>
 
       <div id="expertise" class="sub-wrapper">
-        <div>
-          <img src="images/png/screen.png" alt="screen">
-          <p>WEB DESIGN AND DEVELOPEMENT</p>
-          <p>This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
-            auctor aliquet Aenean.</p>
+        <div class="expertise-title">
+          <h3>EXPERTISE</h3>
+          <p class="text-1">Lorem Ipsum. Proin gravida nibh vel velit</p>
         </div>
+        <div class="expertise-items">
+          <div>
+            <img src="images/png/screen.png" alt="screen">
+            <p class="expertise-item-title">WEB DESIGN & DEVELOPEMENT</p>
+            <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
+              auctor aliquet Aenean.</p>
+          </div>
+          <div>
+            <img src="images/png/pen.png" alt="screen">
+            <p class="expertise-item-title">BRANDING IDENTITY</p>
+            <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
+              auctor aliquet Aenean.</p>
+          </div>
+          <div>
+            <img src="images/png/mobile.png" alt="screen">
+            <p class="expertise-item-title">MOBILE APP</p>
+            <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
+              auctor aliquet Aenean.</p>
+          </div>
+        </div>
+        <div class="expertise-items-horizontal-seprator">
+
+        </div>
+        <div class="expertise-items">
+          <div>
+            <img src="images/png/graph.png" alt="screen">
+            <p class="expertise-item-title">WEB DESIGN & DEVELOPEMENT</p>
+            <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
+              auctor aliquet Aenean.</p>
+          </div>
+          <div>
+            <img src="images/png/gameboy.png" alt="screen">
+            <p class="expertise-item-title">BRANDING IDENTITY</p>
+            <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
+              auctor aliquet Aenean.</p>
+          </div>
+          <div>
+            <img src="images/png/heart.png" alt="screen">
+            <p class="expertise-item-title">MOBILE APP</p>
+            <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
+              auctor aliquet Aenean.</p>
+          </div>
+        </div>
+
       </div>
 
     </div>
   </div>
-
 </body>
-
 
 </html>
