Moved Navbar to the top

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <div class="wrapperOne">
+<div class="wrapperOne">
     
 <div class="navbar">  
 
@@ -40,7 +40,7 @@
     </div>
 
   </div>
-
+  <div class="section2">
     <h1>We Are Group Number 2!</h1>
     <hr class="blueDivider">
     <p id=firstParagraph>This is VS Code's version of Lorem ipsum dolor sit amet 
@@ -52,6 +52,7 @@
     </p>
     <button id="headerButton">LEARN MORE</button>
   </div>
+ </div>
 
   <!-- Starting here: Section 3 -->
 
