--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Robert D'Antoni: Photo Portfolio</title>
+  <title>tajam: An Awesome Creative Agency</title>
   <meta charset="UTF-8" />
   <!-- <link rel="stylesheet" href="reset.css"> -->
   <link rel="stylesheet" href="style.css">
@@ -56,34 +56,37 @@
   <!-- Starting here: Section 3 -->
 
   <div id="about">
-        <div class="our-story sub-wrapper">
-          <div class="our-story-image">
-            <img class="" src="images/png/logo-big.png" alt="" width="235" height="229">
-          </div>
-          <div class="our-story-text">
-            <p class="text-ourStory-title">OUR STORY</p>
-            <p class="text-ourStory-dsc text-1">
-              This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
-              auctor
-              aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh
-              id elit. Duis sed odio sit amet nibh vulputate cursus<br><span class="text-style">&nbsp;</span><br>Morbi
-              accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non &nbsp;mauris vitae
-              erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-              inceptos himenaeos.</p>
-              <button id="buttonSection3">LEARN MORE</button>
-<!--             <a href="#">
-              <div class="btn-learn-more">
-                LEARN MORE
-              </div>
-            </a> -->
-          </div>
-        </div>
+    <div class="our-story sub-wrapper">
+      <div class="our-story-image">
+        <img class="" src="images/png/logo-big.png" alt="" width="235" height="229">
       </div>
+      <div class="our-story-text">
+        <p class="text-ourStory-title">OUR STORY</p>
+        <p class="text-ourStory-dsc">
+          This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
+          auctor
+          aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh
+          id elit. Duis sed odio sit amet nibh vulputate cursus<br><span class="text-style">&nbsp;</span><br>Morbi
+          accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non &nbsp;mauris vitae
+          erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+          inceptos himenaeos.</p>
+          <button id="buttonSection3">LEARN MORE</button>
+      </div>
+    </div>
+  </div>
+
+<!-- PLACE SECTION 4 HERE -->
+
+
+
+<!-- Starting here: Section 5 -->
+
 <div id="expertise" class="sub-wrapper">
         <div class="expertise-title">
           <h3>EXPERTISE</h3>
           <p class="text-1">Lorem Ipsum. Proin gravida nibh vel velit</p>
         </div>
+        <hr class="blackDivider">
         <div class="expertise-items">
           <div>
             <img src="images/png/screen.png" alt="screen">
@@ -132,7 +135,7 @@
   
   <!-- Starting here: Section 6 -->
 
-  <div class="sectionSixContainer">
+   <div class="sectionSixContainer">
     <h3 class="whiteHeadline">
       MEET OUR AMAZING GROUP
     </h3>
@@ -149,40 +152,47 @@
         <img src="Media/ProfilePics/Robert.jpg" class=profilePic>
         <p class="profileText"><b>Robert D.</b><br>Aspiring Full-Stack Developer</p>
       </div>
+      <div class="profileClass">
+        <img src="Media/ProfilePics/Matthias.jpg" class=profilePic>
+        <p class="profileText"><b>Matthias S.</b><br>Aspiring Full-Stack Developer</p>
+      </div>
+
+    </div>
     <p class="whiteParagraph">Become part of our dream-team, join us !
     </p>
     <button id="hiringButton">WE ARE HIRING</button>
   </div>
+  
 <!-- Starting here: Section 7 and Section 8 -->
-  <div class="boxSevenEight">
-    <div class="boxSeven">
-      <h2 id="headingSeven">
-        SEND US YOUR QUESTIONS
-      </h2>
-      <form>
-        <input type="text" id="inputName" size="60" placeholder="  Name"> <br>
-        <input type="email" id="inputEmail" size="60" placeholder="  Email"> <br>
-        <input type="text" id="inputSubject" size="60" placeholder="  Subject"> <br>
-        <textarea id="inputMessage" size="60" placeholder=" Your Message"></textarea> <br>
-        <input type="submit" id="inputSubmit" value="SUBMIT">
-      </form>
-    </div>
-    <div class="boxEight">
-      <h2 id="headingEight">
-        OUR HAPPY CLIENTS
-      </h2>
-      <img src="Media/BrandLogos/Zara_Logo.svg" class="brandLogo" id="logo1">
-      <img src="Media/BrandLogos/Logo_of_Mango.svg" class="brandLogo" id="logo2">
-      <img src="Media/BrandLogos/Barneys_New_York_Logo.svg" class="brandLogo" id="logo3">
-      <img src="Media/BrandLogos/Gucci_Logo.svg" class="brandLogo" id="logo4">
-      <img src="Media/BrandLogos/Calvin_klein_logo.svg" class="brandLogo" id="logo5">
-      <img src="Media/BrandLogos/Logo_NIKE.svg" class="brandLogo" id="logo6">
-      <img src="Media/BrandLogos/Converse_logo.svg" class="brandLogo" id="logo7">
-      <img src="Media/BrandLogos/Puma_Logo.svg" class="brandLogo" id="logo8">
-      <img src="Media/BrandLogos/Levi's_logo.svg" class="brandLogo" id="logo9">
-      <img src="Media/BrandLogos/Billabong.svg" class="brandLogo" id="logo10">
-    </div>
+<div class="boxSevenEight">
+  <div class="boxSeven">
+    <h2 id="headingSeven">
+      SEND US YOUR QUESTIONS
+    </h2>
+    <form>
+      <input type="text" id="inputName" size="60" placeholder="  Name"> <br>
+      <input type="email" id="inputEmail" size="60" placeholder="  Email"> <br>
+      <input type="text" id="inputSubject" size="60" placeholder="  Subject"> <br>
+      <textarea id="inputMessage" size="60" placeholder=" Your Message"></textarea> <br>
+      <input type="submit" id="inputSubmit" value="SUBMIT">
+    </form>
   </div>
+  <div class="boxEight">
+    <h2 id="headingEight">
+      OUR HAPPY CLIENTS
+    </h2>
+    <img src="Media/BrandLogos/Zara_Logo.svg" class="brandLogo" id="logo1">
+    <img src="Media/BrandLogos/Logo_of_Mango.svg" class="brandLogo" id="logo2">
+    <img src="Media/BrandLogos/Barneys_New_York_Logo.svg" class="brandLogo" id="logo3">
+    <img src="Media/BrandLogos/Gucci_Logo.svg" class="brandLogo" id="logo4">
+    <img src="Media/BrandLogos/Calvin_klein_logo.svg" class="brandLogo" id="logo5">
+    <img src="Media/BrandLogos/Logo_NIKE.svg" class="brandLogo" id="logo6">
+    <img src="Media/BrandLogos/Converse_logo.svg" class="brandLogo" id="logo7">
+    <img src="Media/BrandLogos/Puma_Logo.svg" class="brandLogo" id="logo8">
+    <img src="Media/BrandLogos/Levi's_logo.svg" class="brandLogo" id="logo9">
+    <img src="Media/BrandLogos/Billabong.svg" class="brandLogo" id="logo10">
+  </div>
+</div>
 </body>
 <footer>
   Test Footer 
