Added Section 4 Video Player to html and css

--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
 
   <!-- Section 4 Video Player -->
 
+<div class="section4_ourstory">
+
+<!--  <img src="media/png/play.png" class="video_play" alt="Play Button">
+  <p class="font">WATCH OUR STORY</p> -->
+
+
+  <video class="videoSize" controls poster="media/png/video_poster.png" preload="auto">
+    <source src="media/video/tajam_ourstory.mp4" type="video/mp4">
+    <p>Your browser doesn't support HTML5 video. Here is a <a href="tajam_ourstory.mp4">link to the video</a> instead.</p>
+  </video>
+
+</div>
 
 </body>
 
