--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           auctor
           aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh
           id elit. Duis sed odio sit amet nibh vulputate cursus<br><span class="text-style">&nbsp;</span><br>Morbi
-          accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non &nbsp;mauris vitae
+          accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non&nbsp;mauris vitae
           erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
           inceptos himenaeos.</p>
           <button id="buttonSection3">LEARN MORE</button>
@@ -83,7 +83,7 @@
 
 <div id="expertise" class="sub-wrapper">
         <div class="expertise-title">
-          <h3>EXPERTISE</h3>
+          <h3 class="expertise-heading">EXPERTISE</h3>
           <p class="text-1">Lorem Ipsum. Proin gravida nibh vel velit</p>
         </div>
         <hr class="blackDivider">
@@ -146,7 +146,7 @@
     <div class="profilecontainer">
       <div class="profileClass">
         <img src="Media/ProfilePics/Said.jpg" class=profilePic>
-        <p class="profileText"><b>Said</b><br>Aspiring Full-Stack Developer</p>
+        <p class="profileText"><b>Said A.</b><br>Aspiring Full-Stack Developer</p>
       </div>
       <div class="profileClass">
         <img src="Media/ProfilePics/Robert.jpg" class=profilePic>
@@ -195,7 +195,7 @@
 </div>
 </body>
 <footer>
-  Test Footer 
+  Test Footer
 </footer>
 
 
