added required tag to form

--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
       SEND US YOUR QUESTIONS
     </h2>
     <form>
-      <input type="text" id="inputName" size="60" placeholder="  Name"> <br>
-      <input type="email" id="inputEmail" size="60" placeholder="  Email"> <br>
-      <input type="text" id="inputSubject" size="60" placeholder="  Subject"> <br>
-      <textarea id="inputMessage" size="60" placeholder=" Your Message"></textarea> <br>
+      <input type="text" id="inputName" size="60" placeholder="  Name" required> <br>
+      <input type="email" id="inputEmail" size="60" placeholder="  Email" required> <br>
+      <input type="text" id="inputSubject" size="60" placeholder="  Subject" required> <br>
+      <textarea id="inputMessage" size="60" placeholder=" Your Message" required></textarea> <br>
       <input type="submit" id="inputSubmit" value="SUBMIT">
     </form>
   </div>
