fixed some spathing issues in Section 1,5 and 6

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <div class="expertise-title">
           <h3 class="expertise-heading">EXPERTISE</h3>
           <p class="text-1">Lorem Ipsum. Proin gravida nibh vel velit</p>
+          <hr class="blackDivider">
         </div>
-        <hr class="blackDivider">
         <div class="expertise-items">
           <div>
             <img src="images/png/screen.png" alt="screen">
@@ -145,12 +145,14 @@
   <!-- Starting here: Section 6 -->
 
    <div class="sectionSixContainer">
+     <div class="sixHeadlines">
     <h3 class="whiteHeadline">
       MEET OUR AMAZING GROUP
     </h3>
     <h4 class="whiteHeadline">
       Lorem ipsum dolor sit amet ... basically a subheadline
     </h4>
+    </div>
     <hr class="whiteDivider">
     <div class="profilecontainer">
       <div class="profileClass">
