added some media queries and fixed alignement in several Sections

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     </div>
 
   </div>
+
+ <!--  Starting here: Section 2 -->
+
   <div class="section2">
     <h1>We Are Group Number 2!</h1>
     <hr class="blueDivider">
@@ -76,7 +79,7 @@
   </div>
 
 
-  <!-- Section 4 Video Player -->
+  <!-- Starting here: Section 4 Video Player -->
 
 <div class="section4_ourstory">
 
@@ -154,7 +157,7 @@
     </h4>
     </div>
     <hr class="whiteDivider">
-    <div class="profilecontainer">
+    <div class="profileContainer">
       <div class="profileClass">
         <img src="Media/ProfilePics/Said.jpg" class=profilePic>
         <p class="profileText"><b>Said A.</b><br>Aspiring Full-Stack Developer</p>
