added a descriptive alt to all pictures

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div id="about">
     <div class="our-story sub-wrapper">
       <div class="our-story-image">
-        <img class="" src="images/png/logo-big.png" alt="" width="235" height="229">
+        <img class="" src="images/png/logo-big.png" alt="Video Background Picture" width="235" height="229">
       </div>
       <div class="our-story-text">
         <p class="text-ourStory-title">OUR STORY</p>
@@ -107,13 +107,13 @@
               auctor aliquet Aenean.</p>
           </div>
           <div>
-            <img src="images/png/pen.png" alt="screen">
+            <img src="images/png/pen.png" alt="pen">
             <p class="expertise-item-title">BRANDING IDENTITY</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor aliquet Aenean.</p>
           </div>
           <div>
-            <img src="images/png/mobile.png" alt="screen">
+            <img src="images/png/mobile.png" alt="mobile">
             <p class="expertise-item-title">MOBILE APP</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor aliquet Aenean.</p>
@@ -124,19 +124,19 @@
         </div>
         <div class="expertise-items">
           <div>
-            <img src="images/png/graph.png" alt="screen">
+            <img src="images/png/graph.png" alt="graph">
             <p class="expertise-item-title">WEB DESIGN & DEVELOPEMENT</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor aliquet Aenean.</p>
           </div>
           <div>
-            <img src="images/png/gameboy.png" alt="screen">
+            <img src="images/png/gameboy.png" alt="gameboy">
             <p class="expertise-item-title">BRANDING IDENTITY</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor aliquet Aenean.</p>
           </div>
           <div>
-            <img src="images/png/heart.png" alt="screen">
+            <img src="images/png/heart.png" alt="heart">
             <p class="expertise-item-title">MOBILE APP</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor aliquet Aenean.</p>
@@ -159,15 +159,15 @@
     <hr class="whiteDivider">
     <div class="profileContainer">
       <div class="profileClass">
-        <img src="Media/ProfilePics/Said.jpg" class=profilePic>
+        <img src="Media/ProfilePics/Said.jpg" alt="Picture of Said" class=profilePic>
         <p class="profileText"><b>Said A.</b><br>Aspiring Full-Stack Developer</p>
       </div>
       <div class="profileClass">
-        <img src="Media/ProfilePics/Robert.jpg" class=profilePic>
+        <img src="Media/ProfilePics/Robert.jpg" alt="Picture of Robert" class=profilePic>
         <p class="profileText"><b>Robert D.</b><br>Aspiring Full-Stack Developer</p>
       </div>
       <div class="profileClass">
-        <img src="Media/ProfilePics/Matthias.jpg" class=profilePic>
+        <img src="Media/ProfilePics/Matthias.jpg" alt="Picture of Matthias" class=profilePic>
         <p class="profileText"><b>Matthias S.</b><br>Aspiring Full-Stack Developer</p>
       </div>
 
@@ -195,16 +195,16 @@
     <h2 id="headingEight">
       OUR HAPPY CLIENTS
     </h2>
-    <img src="Media/BrandLogos/Zara_Logo.svg" class="brandLogo" id="logo1">
-    <img src="Media/BrandLogos/Logo_of_Mango.svg" class="brandLogo" id="logo2">
-    <img src="Media/BrandLogos/Barneys_New_York_Logo.svg" class="brandLogo" id="logo3">
-    <img src="Media/BrandLogos/Gucci_Logo.svg" class="brandLogo" id="logo4">
-    <img src="Media/BrandLogos/Calvin_klein_logo.svg" class="brandLogo" id="logo5">
-    <img src="Media/BrandLogos/Logo_NIKE.svg" class="brandLogo" id="logo6">
-    <img src="Media/BrandLogos/Converse_logo.svg" class="brandLogo" id="logo7">
-    <img src="Media/BrandLogos/Puma_Logo.svg" class="brandLogo" id="logo8">
-    <img src="Media/BrandLogos/Levi's_logo.svg" class="brandLogo" id="logo9">
-    <img src="Media/BrandLogos/Billabong.svg" class="brandLogo" id="logo10">
+    <img src="Media/BrandLogos/Zara_Logo.svg" class="brandLogo" alt="Logo from Zara" id="logo1">
+    <img src="Media/BrandLogos/Logo_of_Mango.svg" class="brandLogo" alt="Logo from Mango" id="logo2">
+    <img src="Media/BrandLogos/Barneys_New_York_Logo.svg" class="brandLogo" alt="Logo from Barneys" id="logo3">
+    <img src="Media/BrandLogos/Gucci_Logo.svg" class="brandLogo" alt="Logo from Gucci" id="logo4">
+    <img src="Media/BrandLogos/Calvin_klein_logo.svg" class="brandLogo" alt="Logo from CalvinKlein" id="logo5">
+    <img src="Media/BrandLogos/Logo_NIKE.svg" class="brandLogo" alt="Logo from Nike" id="logo6">
+    <img src="Media/BrandLogos/Converse_logo.svg" class="brandLogo" alt="Logo from Converse" id="logo7">
+    <img src="Media/BrandLogos/Puma_Logo.svg" class="brandLogo" alt="Logo from Puma" id="logo8">
+    <img src="Media/BrandLogos/Levi's_logo.svg" class="brandLogo" alt="Logo from Levi's" id="logo9">
+    <img src="Media/BrandLogos/Billabong.svg" class="brandLogo" alt="Logo from Billabong" id="logo10">
   </div>
 </div>
 </body>
