recoded Seperators in Section 5

--- a/index.html
+++ b/index.html
@@ -99,20 +99,20 @@
           <p class="text-1">Lorem Ipsum. Proin gravida nibh vel velit</p>
           <hr class="blackDivider">
         </div>
-        <div class="expertise-items">
-          <div>
+        <div class="expertise-items" id="firstRow">
+          <div id="pngOne">
             <img src="images/png/screen.png" alt="screen">
             <p class="expertise-item-title">WEB DESIGN & DEVELOPEMENT</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor aliquet Aenean.</p>
           </div>
-          <div>
+          <div id="pngTwo">
             <img src="images/png/pen.png" alt="pen">
             <p class="expertise-item-title">BRANDING IDENTITY</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor aliquet Aenean.</p>
           </div>
-          <div>
+          <div id="pngThree">
             <img src="images/png/mobile.png" alt="mobile">
             <p class="expertise-item-title">MOBILE APP</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
@@ -122,20 +122,20 @@
         <div class="expertise-items-horizontal-seprator">
 
         </div>
-        <div class="expertise-items">
-          <div>
+        <div class="expertise-items" id="secondRow">
+          <div id="pngFour">
             <img src="images/png/graph.png" alt="graph">
             <p class="expertise-item-title">WEB DESIGN & DEVELOPEMENT</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor aliquet Aenean.</p>
           </div>
-          <div>
+          <div id="pngFive">
             <img src="images/png/gameboy.png" alt="gameboy">
             <p class="expertise-item-title">BRANDING IDENTITY</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor aliquet Aenean.</p>
           </div>
-          <div>
+          <div id="pngSix">
             <img src="images/png/heart.png" alt="heart">
             <p class="expertise-item-title">MOBILE APP</p>
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
