made Section 5 change depending on the screensize

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
           <p class="text-1">Lorem Ipsum. Proin gravida nibh vel velit</p>
           <hr class="blackDivider">
         </div>
+        <div class="expertise-items-box">
         <div class="expertise-items" id="firstRow">
           <div id="pngOne">
             <img src="images/png/screen.png" alt="screen">
@@ -141,6 +142,7 @@
             <p class="text-1">This is Photoshop's version &nbsp;of Lorem Ipsum. Proin gravida nibh vel velit
               auctor aliquet Aenean.</p>
           </div>
+        </div>
         </div>
       </div>
     </div>
