made the website chrome-friendly

--- a/index.html
+++ b/index.html
@@ -197,16 +197,16 @@
     <h2 id="headingEight">
       OUR HAPPY CLIENTS
     </h2>
-    <img src="Media/BrandLogos/Zara_Logo.svg" class="brandLogo" alt="Logo from Zara" id="logo1">
-    <img src="Media/BrandLogos/Logo_of_Mango.svg" class="brandLogo" alt="Logo from Mango" id="logo2">
-    <img src="Media/BrandLogos/Barneys_New_York_Logo.svg" class="brandLogo" alt="Logo from Barneys" id="logo3">
-    <img src="Media/BrandLogos/Gucci_Logo.svg" class="brandLogo" alt="Logo from Gucci" id="logo4">
-    <img src="Media/BrandLogos/Calvin_klein_logo.svg" class="brandLogo" alt="Logo from CalvinKlein" id="logo5">
-    <img src="Media/BrandLogos/Logo_NIKE.svg" class="brandLogo" alt="Logo from Nike" id="logo6">
-    <img src="Media/BrandLogos/Converse_logo.svg" class="brandLogo" alt="Logo from Converse" id="logo7">
-    <img src="Media/BrandLogos/Puma_Logo.svg" class="brandLogo" alt="Logo from Puma" id="logo8">
-    <img src="Media/BrandLogos/Levi's_logo.svg" class="brandLogo" alt="Logo from Levi's" id="logo9">
-    <img src="Media/BrandLogos/Billabong.svg" class="brandLogo" alt="Logo from Billabong" id="logo10">
+    <img src="Media/BrandLogos/Zara_Logo.png" class="brandLogo" alt="Logo from Zara" id="logo1">
+    <img src="Media/BrandLogos/Logo_of_Mango.png" class="brandLogo" alt="Logo from Mango" id="logo2">
+    <img src="Media/BrandLogos/Barneys_New_York_Logo.png" class="brandLogo" alt="Logo from Barneys" id="logo3">
+    <img src="Media/BrandLogos/Gucci_Logo.png" class="brandLogo" alt="Logo from Gucci" id="logo4">
+    <img src="Media/BrandLogos/Calvin_klein_logo.png" class="brandLogo" alt="Logo from CalvinKlein" id="logo5">
+    <img src="Media/BrandLogos/Logo_NIKE.png" class="brandLogo" alt="Logo from Nike" id="logo6">
+    <img src="Media/BrandLogos/Converse_logo.png" class="brandLogo" alt="Logo from Converse" id="logo7">
+    <img src="Media/BrandLogos/Puma_Logo.png" class="brandLogo" alt="Logo from Puma" id="logo8">
+    <img src="Media/BrandLogos/Levi's_logo.png" class="brandLogo" alt="Logo from Levi's" id="logo9">
+    <img src="Media/BrandLogos/Billabong.png" class="brandLogo" alt="Logo from Billabong" id="logo10">
   </div>
 </div>
 </body>
@@ -224,7 +224,7 @@
                 <div class="sec9_row">
                           <div class="box_v03">                      
                               <div class="logolockup sec9_spacer_logo" id="align9left">
-                                <img src="Media/svg/tajam_logo.svg" width="50px" alt="tajam">
+                                <img src="media/png/tajam-logo-vector.svg" width="50px" alt="tajam">
                                 </span>
                                 <span class="logo-gradient fontlogo logoSize">tajam</span>
                               </div>
@@ -240,13 +240,13 @@
                                   <div class="sec9_ourstudio_alignment"><img src="Media/png/sec9_iconA.png" class="sec9_location_icon">
                                   </div>
                                   <div class="sec9_ourstudio_alignment fontlogo">
-                                    Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat 11480 - Indonesia
+                                    Weiskopffstraße 16 - 12459 Berlin - Germany
                                   </div>
                               </div>
                               <div class="submit_alignment">
                                 <div class="sec9_ourstudio_alignment"><img src="Media/png/sec9_iconB.png" class="sec9_location_icon">
                                 </div>
-                                <div class="sec9_ourstudio_alignment fontlogo">(+62) 21-2224 3333
+                                <div class="sec9_ourstudio_alignment fontlogo">(+49) 030 555789760
                                 </div>
                             </div>
                           </div>
@@ -301,7 +301,7 @@
                         <div class="box_v03">
                         </div>
                         <div class="box_v03 text_align_right">
-                              <div class="sec9_copyright">Copyright © 2015 - Tajem Creative</div>
+                              <div class="sec9_copyright">Copyright © 2021 - WBS CODING SCHOOL</div>
                         </div>  
                 </div>   
         </div>
