made links in navbar clickable

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-<div class="wrapperOne">
+<div class="wrapperOne" id="home">
     
 <div class="navbar">  
 
@@ -28,13 +28,13 @@
 
      <div class="navmenu">
        <nav>
-        <A HREF="" class="font navlinks">HOME</A>
-        <A HREF="" class="font navlinks">ABOUT</A>
-        <A HREF="" class="font navlinks">EXPERTISE</A>
-        <A HREF="" class="font navlinks">TEAMS</A>
-        <A HREF="" class="font navlinks">WORKS</A>
-        <A HREF="" class="font navlinks">PEOPLE SAY</A>
-        <A HREF="" class="font navlinks">CONTACT</A>
+        <A HREF="#home" class="font navlinks">HOME</A>
+        <A HREF="#about" class="font navlinks">ABOUT</A>
+        <A HREF="#expertise" class="font navlinks">EXPERTISE</A>
+        <A HREF="#teams" class="font navlinks">TEAMS</A>
+        <A HREF="#headingSeven" class="font navlinks">WORKS</A>
+        <A HREF="#headingSeven" class="font navlinks">PEOPLE SAY</A>
+        <A HREF="#headingSeven" class="font navlinks">CONTACT</A>
        </nav>
     </div>
 
@@ -149,7 +149,7 @@
   
   <!-- Starting here: Section 6 -->
 
-   <div class="sectionSixContainer">
+   <div class="sectionSixContainer" id="teams">
      <div class="sixHeadlines">
     <h3 class="whiteHeadline">
       MEET OUR AMAZING GROUP
